# selfhosted.sh

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .swarm_token  .yamllint.yml  CHANGELOG.md  IMPLEMENTATION_GUIDE.md  LICENSE  NEXT_STEPS.md  README.md  Taskfile.yml  UNUSED_LEGACY_CODE_ANALYSIS.md  docker-compose.yaml  generated-docker-compose.yaml  homelab.sh  homelab.yaml  homelab.yaml.example  machines.yaml.example  machines.yml  machines.yml.example  mkdocs.yml  plan.md  plan.md.example  pyproject.toml  selfhosted.sh
.cursor/rules/: README.md  branch_commit_pr.mdc  state_tracking.mdc  tdd_enforement.mdc
.github/workflows/: ci-cd.yml  docs.yml  pr-checks.yml  pr-validation-suite.yml  release.yml
analysis/: README.md  SUPERSEDED_ANALYSIS_SUMMARY.md  completed-work-summary.md  data-flow-diagrams.md  generation-inputs-mapping.md  new-architecture-issues-summary.md  unified-approach-design.md
analysis/architecture/: implementation-plan-unified-config.md  simple-implementation-plan.md
analysis/docker-compose/: configuration-leakage-analysis.md  docker-compose-service-enablement-analysis.md
analysis/docker-swarm/: hardware-constraints-analysis.md  legacy-multi-deployment-analysis.md  node-capability-analysis.md  role-based-filtering-analysis.md
analysis/shared/: abstract-configuration-design.md  application-vs-service-config-analysis.md  config-boundaries-validation.md  config-dependencies-mapping.md  data-flow-diagrams.md  services-config-consistency-analysis.md  (+3 more)
config/: services.yaml  volumes.yaml
cryptpad/: config.js
docs/: architecture.md  index.md  mkdocs.yml  roadmap.md  tags.md
examples/: homelab-basic.yaml  homelab-multi-node.yaml  homelab-swarm.yaml
generated-nginx/: actual.template  cryptpad.template  homeassistant.template  homepage.template  photoprism.template  portainer_agent.template
homeassistant/: config  configuration.yaml
reverseproxy/: Dockerfile  backend-not-found.html  default.conf
schemas/: homelab-schema.json
scripts/: analyze_machines_yml.sh  analyze_service_enablement.sh  audit_docs.sh  audit_service_references.sh  build_domain.sh  cli.sh  common.sh  compare_swarm_vs_machines.sh  configure_dns_records.sh  dependency_resolver.sh  deploy.new.sh  deploy_compose_bundles.sh  deployment_unifier.sh  machines.sh  migrate_to_homelab_yaml.sh  nuke.sh  run_local_tests.sh  service_generator.sh  simple_homelab_validator.sh  sleep.sh  ssh.sh  swarm_cluster_manager.sh  translate_homelab_to_compose.sh  translate_homelab_to_swarm.sh  validate_homelab_schema.sh  validate_machines_value.sh  verify_docs.sh  volume_manager.sh  yaml_parser.sh
(+167 files in other folders)
