[tool.poetry]
name = "homelab"
version = "0.1.0"
description = ""
authors = ["Cody Hutchens"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.1.2"
jinja2-cli = "^0.8.2"

[tool.poetry.dev-dependencies]
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
