[tool.poetry]
name = "homelab"
version = "0.1.0"
description = ""
authors = ["Cody Hutchens"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^3.1.2"
jinja2-cli = "^0.8.2"

[tool.poetry.dev-dependencies]
pre-commit = "^3.2.2"
python-semantic-release = "^8.7.0"
yamllint = "^1.35.1"
shellcheck-py = "^0.10.0"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"
commit_message = "chore(release): {version}"
commit_parser = "angular"
major_on_zero = false

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
