[tool.poetry]
name = "homelab"
version = "2.0.0"
description = ""
authors = ["Cody Hutchens"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^3.1.2"
jinja2-cli = "^0.8.2"
PyYAML = "^6.0"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.0"
mkdocs-git-revision-date-localized-plugin = "^1.2.0"
mkdocs-git-committers-plugin-2 = "^2.2.0"
mkdocs-minify-plugin = "^0.8.0"
mkdocs-glightbox = "^0.3.4"
mkdocs-mermaid2-plugin = "^1.1.0"
mkdocs-include-markdown-plugin = "^6.0.0"
pillow = "^10.0.0"
cairosvg = "^2.7.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
python-semantic-release = "^10.3.1"
yamllint = "^1.35.1"
shellcheck-py = "^0.10.0"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = ""
commit_message = "chore(release): {version}"
commit_parser = "conventional"
major_on_zero = false

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
